# project-pygames

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
assets/: about.md
game/: __init__.py  __main__.py  common_types.py  config.py  custom_event.py  helper.py  level_gen.py  logger.py  types.py
game/data/: __init__.py  states.py
game/entities/: enemy.py  groups.py  item.py  player.py  walls.py
game/utils/: __init__.py  bar.py  button.py  cache.py  div.py  eventhandler.py  text.py
game/views/: __init__.py  battle.py  map.py  menu.py  pause.py  slots.py  start.py  store.py  view1.py  view2.py
src/: __init__.py  __main__.py
src/views/: battle_view.py  game_over_view.py  game_view.py  inventory_view.py  menu_view.py  pause_view.py  start_view.py
views/: __init__.py  cache.py
