[tool.poetry]
name = "project-pygames"
version = "0.0.1"
description = ""
authors = ["Vagish Vela <git@vagish.com>", "Arkaprabha Sinha Roy <sinharoy.ap@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "game" }]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"
numpy = "^1.24.2"
mypy = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"

pylint = "^2.17.2"
# pylint dependences
dill = ">=0.3.6"
wrapt = ">=1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.poetry.scripts]
game = "main:main"
